GearsetPOC/force-app/main/default/objects/SurveyTaker__c/fields/AgentRate__c.field-meta.xml
<CustomField>
    <fullName>AgentRate__c</fullName>
    <label>AgentRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>