GearsetPOC/force-app/main/default/objects/SurveyTaker__c/fields/CustomerSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>CustomerSatisfaction__c</fullName>
    <label>Customer Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>