GearsetPOC/force-app/main/default/objects/SurveyTaker__c/fields/Language_of_Survey_Taken__c.field-meta.xml
<CustomField>
    <fullName>Language_of_Survey_Taken__c</fullName>
    <formula>IF( Contains(Owner:User.FirstName,&quot;French&quot;),&quot;French&quot;,&quot;English&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language of Survey Taken</label>
    <type>Text</type>
</CustomField>