GearsetPOC/force-app/main/default/objects/SurveyTaker__c/fields/Live_Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>