GearsetPOC/force-app/main/default/objects/SurveyTaker__c/fields/LiveChatKey__c.field-meta.xml
<CustomField>
    <fullName>LiveChatKey__c</fullName>
    <label>LiveChatKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>